# fingent

./: .env.example  .gitignore  README.md  pyproject.toml
apps/: chainlit_app.py
eval/: logs.json  questions_mi.csv  run_eval.py  run_single.py
src/fingent/: __init__.py  agent.py  config.py
src/fingent/apps/: __init__.py  cli.py
src/fingent/build_kb/: __init__.py  bedrock_embedding.py  cli.py  ingest.py
src/fingent/models/: __init__.py  factory.py  usage.py
src/fingent/orchestrator/: __init__.py  catalog.py  chains.py  edges.py  graph.py  nodes.py  prompts.py  state.py  streaming.py
src/fingent/retrieval/: __init__.py  auto_query.py  hybrid.py  kb.py  smart_alpha.py  tool.py
tests/: test_smoke.py
